--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
       :root {
         color-scheme: dark;
         font-family: "Inter", "Segoe UI", system-ui, -apple-system, sans-serif;
-        --bg: #020202;
-        --card: #0e0e0e;
-        --accent: #8cfffb;
-        --text: #f8f8f8;
+        --bg: #010101;
+        --card: #0a0a0a;
+        --card-edge: rgba(255, 255, 255, 0.05);
+        --accent: #7df7ff;
+        --text: #f7f7f7;
       }
 
       * {
@@ -21,21 +22,23 @@
       body {
         margin: 0;
         min-height: 100vh;
-        background: radial-gradient(circle at top, #111, var(--bg));
+        background: radial-gradient(circle at 50% -20%, rgba(255, 255, 255, 0.08), transparent 45%),
+          linear-gradient(120deg, #010101, #050505 40%, #010101);
         display: flex;
         align-items: center;
         justify-content: center;
         color: var(--text);
+        padding: 4vh 2vw;
       }
 
       main {
-        width: min(520px, 92vw);
+        width: min(540px, 90vw);
         text-align: center;
-        padding: 3.5rem 3rem 2.75rem;
+        padding: 3.75rem 3.25rem 3rem;
         background: var(--card);
-        border-radius: 22px;
-        border: 1px solid rgba(255, 255, 255, 0.045);
-        box-shadow: 0 25px 70px rgba(0, 0, 0, 0.55);
+        border-radius: 26px;
+        border: 1px solid var(--card-edge);
+        box-shadow: 0 30px 80px rgba(0, 0, 0, 0.65), inset 0 0 0 1px rgba(255, 255, 255, 0.02);
       }
 
       h1 {
@@ -46,55 +49,49 @@
       }
 
       p {
-        margin: 0 0 2rem;
-        font-size: 1rem;
-        color: #aaaaaa;
+        margin: 0 0 2.25rem;
+        font-size: 1.05rem;
+        color: #949494;
       }
 
       .link-grid {
-        display: grid;
-        gap: 1.1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1.2rem;
       }
 
       .link-grid a {
         display: block;
-        padding: 1.45rem;
-        border-radius: 20px;
-        font-size: 1.25rem;
+        padding: 1.55rem;
+        border-radius: 24px;
+        font-size: 1.3rem;
         font-weight: 700;
-        letter-spacing: 0.08em;
+        letter-spacing: 0.12em;
         text-decoration: none;
         text-transform: uppercase;
         color: var(--text);
-        background: linear-gradient(135deg, #151515, #050505);
-        border: 3px solid rgba(255, 255, 255, 0.12);
-        transition: border-color 0.15s ease, transform 0.15s ease;
+        background: linear-gradient(165deg, #141414, #050505);
+        border: 4px solid rgba(255, 255, 255, 0.08);
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05), 0 15px 30px rgba(0, 0, 0, 0.45);
+        transition: border-color 0.1s ease, transform 0.1s ease;
       }
 
       .link-grid a:focus-visible,
       .link-grid a:hover {
         border-color: var(--accent);
-        transform: translateY(-2px);
+        transform: translateY(-1px);
       }
 
-      footer {
-        margin-top: 2.5rem;
-        font-size: 0.9rem;
-        color: #808080;
-      }
     </style>
   </head>
   <body>
     <main>
-      <h1>Choose Your Destination</h1>
-      <p>Swap in your real links below to connect viewers to your world.</p>
       <div class="link-grid">
-        <a href="#link1">Proto 1</a>
-        <a href="#link2">Proto 2</a>
+        <a href="https://cloud.protopie.io/p/39039c757edf6bc1dae939c9?ui=true&scaleToFit=false&enableHotspotHints=true&cursorType=touch&mockup=true&bgColor=%23F5F5F5&bgImage=undefined&playSpeed=1">Proto 1</a>
+        <a href="https://www.figma.com/proto/b8i0LoSlnWV7DoGcYo602U/V3_Glance_GTV?page-id=2982%3A1943&node-id=3051-3285&viewport=1276%2C-309%2C0.04&t=9ilXazqvoC0wtKuy-1&scaling=scale-down-width&content-scaling=fixed&starting-point-node-id=3051%3A3581">Proto 2</a>
         <a href="#link3">Proto 3</a>
         <a href="#link4">Proto 4</a>
       </div>
-      <footer>Designed for the big screen.</footer>
     </main>
   </body>
 </html>
