--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
   <body>
     <main>
       <div class="link-grid">
-        <a href="https://cloud.protopie.io/p/39039c757edf6bc1dae939c9?ui=true&scaleToFit=false&enableHotspotHints=true&cursorType=touch&mockup=true&bgColor=%23F5F5F5&bgImage=undefined&playSpeed=1">Proto 1</a>
-        <a href="https://www.figma.com/proto/b8i0LoSlnWV7DoGcYo602U/V3_Glance_GTV?page-id=2982%3A1943&node-id=3051-3285&viewport=1276%2C-309%2C0.04&t=9ilXazqvoC0wtKuy-1&scaling=scale-down-width&content-scaling=fixed&starting-point-node-id=3051%3A3581">Proto 2</a>
+        <a href="https://cloud.protopie.io/p/39039c757edf6bc1dae939c9?ui=false&scaleToFit=true&enableHotspotHints=false&cursorType=touch&mockup=false&bgColor=%23F5F5F5&bgImage=undefined&playSpeed=1">Proto ProtoPie</a>
+        <a href="https://www.figma.com/proto/b8i0LoSlnWV7DoGcYo602U/V3_Glance_GTV?page-id=2982%3A1943&node-id=3051-3285&viewport=1276%2C-309%2C0.04&t=9ilXazqvoC0wtKuy-1&scaling=scale-down-width&content-scaling=fixed&starting-point-node-id=3051%3A3581">Proto Figma</a>
         <a href="#link3">Proto 3</a>
         <a href="#link4">Proto 4</a>
       </div>
