--- a/index.html
+++ b/index.html
@@ -34,25 +34,14 @@
       main {
         width: min(540px, 90vw);
         text-align: center;
-        padding: 3.75rem 3.25rem 3rem;
+        /* padding: 3.75rem 3.25rem 3rem;
         background: var(--card);
         border-radius: 26px;
         border: 1px solid var(--card-edge);
-        box-shadow: 0 30px 80px rgba(0, 0, 0, 0.65), inset 0 0 0 1px rgba(255, 255, 255, 0.02);
+        box-shadow: 0 30px 80px rgba(0, 0, 0, 0.65), inset 0 0 0 1px rgba(255, 255, 255, 0.02); */
       }
 
-      h1 {
-        font-size: clamp(2rem, 4vw, 2.75rem);
-        margin: 0 0 1.35rem;
-        letter-spacing: 0.04em;
-        text-transform: uppercase;
-      }
-
-      p {
-        margin: 0 0 2.25rem;
-        font-size: 1.05rem;
-        color: #949494;
-      }
+     
 
       .link-grid {
         display: flex;
@@ -63,7 +52,7 @@
       .link-grid a {
         display: block;
         padding: 1.55rem;
-        border-radius: 24px;
+        border-radius: 0px;
         font-size: 1.3rem;
         font-weight: 700;
         letter-spacing: 0.12em;
