--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   <body>
     <main>
       <div class="link-grid">
+        <a href="proto.html">Vibe code Proto Test</a>
         <a href="https://cloud.protopie.io/p/39039c757edf6bc1dae939c9?ui=false&scaleToFit=true&enableHotspotHints=false&cursorType=touch&mockup=false&bgColor=%23F5F5F5&bgImage=undefined&playSpeed=1">Proto ProtoPie</a>
         <a href="https://www.figma.com/proto/b8i0LoSlnWV7DoGcYo602U/V3_Glance_GTV?page-id=2982%3A1943&node-id=3051-3285&viewport=1276%2C-309%2C0.04&t=9ilXazqvoC0wtKuy-1&scaling=scale-down-width&content-scaling=fixed&starting-point-node-id=3051%3A3581">Proto Figma</a>
         <a href="https://cloud.protopie.io/p/4c319917cc2a725ad5e577eb?ui=false&scaleToFit=true&enableHotspotHints=false&cursorType=touch&mockup=false&bgColor=%23F5F5F5&bgImage=undefined&playSpeed=1">Protopie litw test</a>
